<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dev.angelbookstore.MainActivity">

    <ImageView
        android:id="@+id/wallpaperimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:contentDescription="@string/shoppic"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bookstore" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logoImgDesc"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/mylogo"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:maxLines="16"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="5dp"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="4dp"
                android:text="@string/subhead"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:id="@+id/timing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/timingimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@string/timingImgDesc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/time" />

                <TextView
                    android:id="@+id/timimgtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="2dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/timing"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/addrimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@string/addressImgDesc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/route1" />

                <TextView
                    android:id="@+id/addrtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="2dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/address"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/contactimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@string/contactNoImgDesc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/telphn" />

                <TextView
                    android:id="@+id/contacttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="2dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/contactNo"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/emailimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@string/emailIdImgDesc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/email1" />

                <TextView
                    android:id="@+id/emailtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="2dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/emailId"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/websiteL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/webimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@string/webaddrImgDesc"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/website" />

                <TextView
                    android:id="@+id/webtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="2dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/webaddr"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
